style.css
:root {
  --case: #5a5c68;
  --orange: #f90;
  --red: #f30;
  --display: #c1d797;
  --blackButton: #3d4049;
  --grayButton: #bcc1c7;
  --button-size: 100px;
  --border: 20px;
  --gap: 15px;
}
#case {
  background-color: var(--case);
  max-width: calc(4 * (var(--button-size) + var(--gap)));
  margin: auto;
  padding: var(--border);
}
#case * {
  color: white;
}
#ac {
  background-color: var(--orange);
  word-wrap: break-word;
}
#del {
  background-color: var(--red);
}
#display {
  background-color: var(--display);
  height: 10vh;
  padding: 5px;
}
#input {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  margin-top: 2em;
  column-gap: var(--gap);
  row-gap: var(--gap);
  justify-items: stretch;
}
.btn {
  width: 100%;
  height: 100%;
  background-color: var(--blackButton);
  margin: auto auto;
  text-align: center;
  font-size: 50px;
  text-transform: uppercase;
  cursor: pointer;
  vertical-align: middle;
  display: grid;
  align-items: center;

  /* disables select text on buttons */
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently
                        supported by Chrome, Edge, Opera and Firefox */
}
.function {
  background-color: var(--grayButton);
}
.row {
  color: black !important;
  font-size: 1.5em;
  max-width: 100%;
  overflow-x: hidden;
  text-align: right;
  font-family: "Orbitron", sans-serif;
}
#bottom {
  font-size: 3em;
}
.plus {
  grid-column: 4;
  grid-row: 4 / 6;
}
.btn:hover {
  transform: scale(0.9);
}

